Fix home page Whitespace

--- a/style.css
+++ b/style.css
@@ -54,6 +54,10 @@ section {
     cursor: default;
 }
 
+.logo:hover {
+    cursor: pointer;
+}
+
 .navbar a {
     font-size: 1.7rem;
     font-weight: 500;
@@ -70,8 +74,8 @@ section {
     position: relative;
     top: 20%;
     left: 20%;
-    height: 20rem;
-    width: 20rem;
+    height: 17rem;
+    width: 17rem;
     border-radius: 50%;
     box-shadow: 0 0 2rem var(--main-color);
 }
@@ -84,13 +88,14 @@ section {
 }
 
 .home h2 {
-    font-size: 13rem;
+    font-size: 8rem;
     display: flex;
     align-items: flex-end;
+    margin-bottom: 3rem;
 }
 
 .home h2 span {
-    font-size: 5rem;
+    font-size: 4rem;
     font-style: italic;
     color: var(--main-color);
     box-shadow: 0 0 1rem var(--text-color);
@@ -99,16 +104,28 @@ section {
     margin-left: 2rem;
 }
 
+.home .home-content {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
 .home .home-content p {
     font-size: 1.9rem;
     max-width: 70rem;
     margin: 2rem;
     line-height: 1.5;
+    text-align: center;
+}
+
+.social-icons {
+    margin: 1rem 0;
 }
 
 .social-icons a {
-    width: 4rem;
-    height: 4rem;
+    width: 3rem;
+    height: 3rem;
     border-radius: 50%;
     background: transparent;
     border: .2rem solid var(--main-color);
@@ -116,7 +133,7 @@ section {
     display: inline-flex;
     justify-content: center;
     align-items: center;
-    font-size: 2.6rem;
+    font-size: 1.9rem;
     color: var(--text-color);
     transition: .5s ease;
 }
